--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -88,7 +88,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true
+fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -213,8 +213,8 @@ blur-background-exclude = [
 backend = "xr_glx_hybrid";
 
 # Enable/disable VSync.
-# vsync = false
-vsync = false;
+vsync = true;
+#vsync = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -245,7 +245,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 60;
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
