--- a/polybar/config
+++ b/polybar/config
@@ -18,10 +18,10 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #6f
+background = #44
 x1 = #ff1a1a
 x2 = #0099ff
-background-alt = #6f
+background-alt = #44
 ;foreground = ${xrdb:color7:#222}
 foreground = #ff
 foreground-alt = #000
@@ -32,7 +32,7 @@ alert = #bd2c40
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+height = 24
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0
@@ -228,7 +228,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground}
 format-underline = #f90000
-label = %{A1:xfce4-terminal -e htop:}%percentage:2%%%{A}
+label = %{A1:st -e htop:}%percentage:2%%%{A}
 
 
 [module/memory]
@@ -246,12 +246,12 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #ff00ff
-label-connected = %{A1:xfce4-terminal -e nmtui:}%essid%%{A}
+label-connected = %{A1:st -e nmtui:}%essid%%{A}
 
 ;format-disconnected =
 format-disconnected = <label-disconnected>
 format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = %{A1:xfce4-terminal -e nmtui:}%ifname% disconnected%{A}
+label-disconnected = %{A1:st -e nmtui:}No wifi%{A}
 label-disconnected-foreground = ${colors.foreground-alt}
 
 ramp-signal-0 = 
