--- a/starship.toml
+++ b/starship.toml
@@ -5,7 +5,7 @@ success_symbol = "[└─>](bold green)"
 error_symbol = "[└─>](bold red)"
 
 [cmd_duration]
-min_time = 10_000  # Show command duration over 10,000 milliseconds (=10 sec)
+min_time = 10  # Show command duration over 10,000 milliseconds (=10 sec)
 format = " took [$duration]($style)"
 
 [directory]
