--- a/starship.toml
+++ b/starship.toml
@@ -5,14 +5,14 @@ success_symbol = "[└─>](bold green)"
 error_symbol = "[└─>](bold red)"
 
 [cmd_duration]
-min_time = 10  # Show command duration over 10,000 milliseconds (=10 sec)
+min_time = 20 
 format = " took [$duration]($style)"
 
 [directory]
 format = "[$path]($style)[$lock_symbol]($lock_style)"
 
 [git_branch]
-format = " via [$symbol$branch]($style) "
+format = " on [$symbol$branch]($style) "
 symbol = "🍣 "
 style = "bold yellow"
 
@@ -31,7 +31,7 @@ diverged = "🔱 🏎️ 💨×${ahead_count} 🐢×{behind_count} "
 untracked = "🛤️ ×${count} "
 stashed = "📦 "
 modified = "📝×${count} "
-staged = "🗃️×${count} "
+staged = "🗃️ ×${count} "
 renamed = "📛×${count} "
 deleted = "🗑️ ×${count} "
 style = "brightwhite"
