--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Qogir-win-dark
 gtk-icon-theme-name=Qogir-dark
-gtk-font-name=Comic Sans MS 10
+gtk-font-name=Comic Sans MS Bold 10
 gtk-cursor-theme-name=Qogir-dark
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
