--- a/audacious/config
+++ b/audacious/config
@@ -3,19 +3,33 @@
 generic_title_format=${title}
 shuffle=TRUE
 
+[audgui]
+no_confirm_playlist_delete=TRUE
+
+[extra_stereo]
+intensity=5.8
+
+[history]
+entry0=https://drive.google.com/file/d/1XXHafy5xkcVKwIVtfJspkNGcChe0HWRo/view?usp=sharing
+entry1=https://drive.google.com/drive/folders/199bQIFaTyLIVoIqjTBsYJ8YIQVMMCwxG
+
+[notify]
+actions=FALSE
+
 [qtui]
-column_widths=25,25,515,175,50,234,175,25,100,25,75,275,275,275,75
+column_widths=25,25,515,175,50,234,175,25,100,25,61,275,275,275,75
 infoarea_visible=FALSE
 menu_visible=FALSE
 player_height=758
 player_width=1266
-playlist_columns=playing title length
+playlist_columns=playing length title
+playlist_headers_bold=TRUE
 
 [search-tool]
 path=/home/tanveer/Music
 
 [skins]
-skin=/usr/share/audacious/Skins/Default
+skin=/usr/share/audacious/Skins
 
 [skins-layout]
 qt-spectrum=494,302,288,192
