--- a/audacious/config
+++ b/audacious/config
@@ -1,23 +1,47 @@
 
+[alsa]
+mixer-element=Master
+
 [audacious]
+advance_on_delete=TRUE
+always_resume_paused=FALSE
 generic_title_format=${title}
 shuffle=TRUE
 
 [audgui]
+filesel_path=/home/tanveer
 no_confirm_playlist_delete=TRUE
 
 [extra_stereo]
 intensity=5.8
 
+[gtkui]
+column_widths=10,275,175,10,175,175,10,100,38,70,275,275,275,10,275
+player_height=758
+player_width=628
+player_x=5
+player_y=33
+playlist_columns=length title
+playlist_tabs_visible=FALSE
+
+[gtkui-layout]
+item0_name=Spectrum Analyzer
+item0_pos=-1,304,548,412,245
+item1_name=OpenGL Spectrum Analyzer
+item1_pos=-1,642,33,625,754
+item_count=2
+
 [history]
-entry0=https://drive.google.com/file/d/1XXHafy5xkcVKwIVtfJspkNGcChe0HWRo/view?usp=sharing
-entry1=https://drive.google.com/drive/folders/199bQIFaTyLIVoIqjTBsYJ8YIQVMMCwxG
+entry0=https://www.youtube.com/watch?v=YEPLHKNrYgw
+entry1=https://www.youtube.com/playlist?list=PLQipVSzxhmzSsoeZGBJv9pjVvAE9l3moW
+entry2=https://drive.google.com/file/d/1XXHafy5xkcVKwIVtfJspkNGcChe0HWRo/view?usp=sharing
+entry3=https://drive.google.com/drive/folders/199bQIFaTyLIVoIqjTBsYJ8YIQVMMCwxG
 
 [notify]
 actions=FALSE
 
 [qtui]
-column_widths=25,25,515,175,50,234,175,25,100,25,61,275,275,275,75
+column_widths=25,25,570,175,50,234,175,25,100,25,71,275,275,275,75
 infoarea_visible=FALSE
 menu_visible=FALSE
 player_height=758
@@ -29,13 +53,20 @@ playlist_headers_bold=TRUE
 path=/home/tanveer/Music
 
 [skins]
-skin=/usr/share/audacious/Skins
+analyzer_mode=1
+equalizer_x=500
+equalizer_y=340
+player_x=540
+player_y=128
+playlist_visible=TRUE
+playlist_x=540
+playlist_y=244
+skin=/usr/share/audacious/Skins/Default
 
 [skins-layout]
-qt-spectrum=494,302,288,192
-vumeter-qt=494,302,288,192
+qt-spectrum=462,299,288,192
+vumeter-qt=187,315,288,192
 
 [vumeter]
-display_legend=FALSE
 falloff=50
 peak_hold_time=1
