--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,10 +1,10 @@
 [Settings]
-gtk-theme-name=Qogir-win-dark
-gtk-icon-theme-name=Qogir-dark
-gtk-font-name=Comic Sans MS Bold 10
-gtk-cursor-theme-name=Qogir-dark
+gtk-theme-name=Materia-dark
+gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=Roboto Bold 10
+gtk-cursor-theme-name=Qogir-white-cursors
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
@@ -12,6 +12,6 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintmedium
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
 gtk-modules=gail:atk-bridge
