--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -92,11 +92,11 @@ fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.02;
+fade-in-step = 0.10;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.02;
+fade-out-step = 0.10;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -169,7 +169,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+#blur-background = true;
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -195,7 +195,6 @@ blur-kern = "3x3box";
 # blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
-  "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -245,7 +244,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 60;
+refresh-rate = 0;
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -259,7 +258,7 @@ refresh-rate = 60;
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy, 
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected, 
 # to maximize performance for full-screen windows. Known to cause flickering 
@@ -309,14 +308,14 @@ detect-client-leader = true
 # practically happened) and may not work with blur-background. 
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+ glx-no-stencil = true;
 
 # GLX backend: Avoid rebinding pixmap on window damage. 
 # Probably could improve performance on rapid window content changes, 
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+ glx-no-rebind-pixmap = true;
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -324,13 +323,13 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = true;
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents. 
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
@@ -415,9 +414,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.85; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.95; }
+  dropdown_menu = { opacity = 0.95; }
 };
