--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,7 +8,7 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -88,15 +88,15 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = false;
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.10;
+fade-in-step = 0.1;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.10;
+fade-out-step = 0.1;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -315,7 +315,7 @@ detect-client-leader = true
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
- glx-no-rebind-pixmap = true;
+ glx-no-rebind-pixmap = false;
 
 # Disable the use of damage information. 
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
