--- a/polybar/config
+++ b/polybar/config
@@ -18,14 +18,14 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #00
+background = #bb
 ;x1 = #32343d
-x1 = #88
+x1 = #bb
 x2 = #0099ff
 background-alt = ${colors.background}
 ;foreground = ${xrdb:color7:#222}
 foreground = #fff
-foreground-alt = #000
+foreground-alt = #444
 primary = #ffb52a
 secondary = #00ff00
 alert = #bd2c40
@@ -33,10 +33,10 @@ alert = #bd2c40
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 26
+height = 28
 ;offset-x = 0%
 ;offset-y = 0%
-radius = 0
+radius = 5
 fixed-center = true
 enable-ipc = true
 
@@ -46,21 +46,22 @@ foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 
-border-size = 0
+border-size = 4
 border-color = #00000000
 
 padding-left = 0
 padding-right = 0
 
-module-margin-left = 0
-module-margin-right = 0
+module-margin-left = 2
+module-margin-right = 1
 
-font-0 = Symbols Nerd Font:pixelsize=13;3
-font-1 = Roboto:style=Medium:pixelsize=11;2
+
+font-0 = Roboto:style=Medium:pixelsize=12;2
+font-1 = Symbols Nerd Font:pixelsize=16;3
 
 modules-left = arch bspwm music
 ;modules-center = xwindow
-modules-right = xbacklight pulseaudio memory cpu wlan battery temperature date
+modules-right = xbacklight pulseaudio-control cpu memory wlan battery temperature date power
 
 tray-position = center
 tray-padding = 2
@@ -81,7 +82,7 @@ cursor-scroll = ns-resize
 [module/xwindow]
 type = internal/xwindow
 format-background = ${colors.x1} 
-format-padding = 2
+format-padding = 0
 label = %title:0:30:...%
 
 [module/bspwm]
@@ -90,6 +91,7 @@ type = internal/bspwm
 label-focused = %icon%
 label-focused-background = ${colors.x1}  
 label-focused-underline= ${colors.primary}
+label-focused-foreground= ${colors.primary}
 label-focused-padding = 3
 
 label-occupied = %icon%
@@ -111,56 +113,58 @@ label-empty-padding = 3
 ws-icon-0 = I;
 ws-icon-1 = II;
 ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;ﱘ
+ws-icon-3 = IV;﬏
+ws-icon-4 = V;
+ws-icon-5 = VI;
 
 [module/xbacklight]
 type = internal/xbacklight
 
 format =  <ramp> <label>
+format-foreground = #00ef00
 format-background = ${colors.x1}
 format-underline = #00ef00
 label = %percentage%
-format-padding = 2
+format-padding = 0
 
 ramp-0 =  
-ramp-0-foreground = #00ddff
 ramp-1 =  
-ramp-1-foreground = #00ff00
 ramp-2 =  
-ramp-2-foreground = #ffb52a
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-padding = 2
-format-prefix-foreground = ${colors.foreground}
+format-padding = 0
+format-prefix-foreground = #f90000
 format-background = ${colors.x1}
 format-underline = #f90000
+format-foreground = #f90000
 label = %{A1:st -e htop:}%percentage:2%%%{A}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-padding = 2
+format-padding = 0
 format-underline = #4bffdc
+format-foreground = #4bffdc
 format-background = ${colors.x1}
 label = %{A1:xfce4-taskmanager:}%mb_used%%{A}
 
 [module/wlan]
 type = internal/network
-interface = wlp6s0
+interface = wlo1
 interval = 3.0
 
-format-connected-padding = 2
+format-connected-padding = 0
 format-connected = <label-connected>
 format-connected-underline = #ff00ff
+format-connected-foreground = #ff00ff
 format-connected-background = ${colors.x1}
-label-connected = %{A1:st -e nmtui:}直%essid%%{A}
+label-connected = %{A1:st -e nmtui:}直 %essid%%{A}
 
 format-disconnected = <label-disconnected>
-format-disconnected-padding = 2
+format-disconnected-padding = 0
 format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %{A1:st -e nmtui:}睊No wifi%{A}
 label-disconnected-foreground = ${colors.foreground-alt}
@@ -188,8 +192,9 @@ interval = 5
 
 date=%a, %d %b,
 time =%I:%M %p
-format-padding = 2
+format-padding = 0
 format-underline = #00ddff
+format-foreground = #00ddff
 format-background = ${colors.x1}
 
 label =%date% %time%
@@ -202,11 +207,11 @@ format-volume-background = ${colors.x1}
 format-volume-underline = #ffff00
 label-volume=%percentage%
 label-volume-foreground = ${root.foreground}
-format-volume-padding = 2
+format-volume-padding = 0
 
 label-muted = 
 label-muted-foreground = #ff
-format-muted-padding = 2
+format-muted-padding = 0
 format-muted-background = ${colors.x1}
 format-muted-underline = #ffff00
 ramp-volume-0 = 
@@ -220,23 +225,28 @@ click-right = pavucontrol
 
 [module/battery]
 type = internal/battery
-battery = BAT1
-adapter = ACAD
-full-at = 99
+battery = BAT0
+adapter = ADP1
+time-format = %H:%M
+full-at = 100
 
 format-charging-background = ${colors.x1}
-format-charging = <animation-charging> <label-charging>
-format-charging-padding = 2
+format-charging = <animation-charging><label-charging>
+format-charging-padding = 0
 format-charging-underline = #ffb52a
+label-charging-foreground = #ffb52a
 
-format-discharging-background = ${colors.x1}
-format-discharging-padding = 2
+format-discharging-padding = 0
 format-discharging = <ramp-capacity> <label-discharging>
+label-discharging-foreground = #ffb52a
+format-discharging-background = ${colors.x1}
+label-discharging = %percentage%% (%time%)
 format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = ""
-format-full-padding = 2
-format-full-prefix-foreground = ${colors.foreground}
+format-full-padding = 1
+format-full-prefix-foreground = #ffb52a
+format-full-foreground = #ffb52a
 format-full-background = ${colors.x1}
 format-full-prefix-background = ${colors.x1}
 format-full-underline = ${self.format-charging-underline}
@@ -253,7 +263,7 @@ ramp-capacity-6 = 
 ramp-capacity-7 = 
 ramp-capacity-8 = 
 ramp-capacity-9 = 
-ramp-capacity-foreground = ${colors.foreground}
+ramp-capacity-foreground = #ffb52a
 
 animation-charging-0 = 
 animation-charging-1 = 
@@ -262,24 +272,31 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-5 = 
 animation-charging-6 = 
-animation-charging-foreground = ${colors.foreground}
+animation-charging-foreground = #ffb52a
 animation-charging-framerate = 2000
 
 [module/temperature]
 type = internal/temperature
 ;thermal-zone = 0
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon3/temp2_input
 interval = 2
 
 format = <ramp> <label>
-format-padding = 2
+format-warn = <ramp> <label-warn>
+format-padding = 0
 format-background = ${colors.x1}
-format-underline = #f50a4d
+format-underline = #f50a6d
+label-foreground = #f50a6d
+label-warn-foreground = #f50a6d
+format-warn-underline = #f50a6d
 label = %temperature-c%   
+label-warn = %temperature-c%
 
-ramp-0 =  
-ramp-2 = 
-ramp-foreground = ${colors.foreground}
+ramp-0 = 
+ramp-1 =  
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-foreground = #f50a6d
 
 [settings]
 screenchange-reload = true
@@ -292,10 +309,10 @@ screenchange-reload = true
 [module/music]
 type = custom/script
 exec = audtool current-song
-interval = 3
+interval = 2
 format = <label> 
 format-background = ${colors.x1}
-label =  %output:0:52:...%
+label =  %output:00:70:...%
 label-margin-right = 2
 label-foreground = #ffffff
 click-left = audacious -t
@@ -308,9 +325,9 @@ scroll-down = audtool set-volume -5
 type = custom/text
 content = 
 content-padding = 2
-content-foreground = #00bbff
-content-background = ${colors.x1} 
-click-left = dmenu_run_history -p RUN:
+content-foreground = #fff
+content-background = #4b00aa
+click-left = dmenu_run_history -sb "#4b00aa" -p RUN:
 
 [module/power]
 type = custom/text
@@ -318,8 +335,21 @@ content = 
 content-padding = 2
 content-margin-left= 2
 content-foreground = #fff
-content-background = #0088aa
+content-background = #ee0044
 click-left = $HOME/.config/bspwm/power
+
+[module/pulseaudio-control]
+type = custom/script
+tail = true
+format-underline = #ffff00
+format-background = ${colors.x1}
+label-foreground = #ffff00
+exec = pulseaudio-control --icons-volume " , , " --icon-muted " " --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo: Internal" --sink-nicknames-from "device.description" listen
+click-right = exec pavucontrol &
+click-left = pulseaudio-control togmute
+click-middle = pulseaudio-control --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-sink
+scroll-up = pulseaudio-control --volume-max 150 up
+scroll-down = pulseaudio-control --volume-max 150 down
 
 [global/wm]
 margin-top = 5
