--- a/lxterminal/lxterminal.conf
+++ b/lxterminal/lxterminal.conf
@@ -1,8 +1,8 @@
 [general]
-fontname=JetBrains Mono NL Medium 13
+fontname=JetBrains Mono 13
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=99990
-bgcolor=rgba(0,0,0,0.855705)
+bgcolor=rgba(0,0,0,0.889262)
 fgcolor=rgb(196,197,181)
 palette_color_0=rgb(26,26,26)
 palette_color_1=rgb(244,0,95)
