--- a/audacious/config
+++ b/audacious/config
@@ -5,9 +5,10 @@ mixer-element=Master
 [audacious]
 advance_on_delete=TRUE
 always_resume_paused=FALSE
-equalizer_bands=2,6,3,2,1,1,2,2,3,5
+equalizer_bands=4,8,4,2,1,0,2,3,4,6
 equalizer_preamp=-4
 generic_title_format=${title}
+output_bit_depth=0
 record_stream=0
 shuffle=TRUE
 
@@ -17,6 +18,33 @@ no_confirm_playlist_delete=TRUE
 
 [extra_stereo]
 intensity=5.8
+
+[globalHotkey]
+Hotkey_0_event=0
+Hotkey_0_key=173
+Hotkey_0_mask=0
+Hotkey_1_event=1
+Hotkey_1_key=172
+Hotkey_1_mask=0
+Hotkey_2_event=2
+Hotkey_2_key=209
+Hotkey_2_mask=0
+Hotkey_3_event=3
+Hotkey_3_key=174
+Hotkey_3_mask=0
+Hotkey_4_event=4
+Hotkey_4_key=171
+Hotkey_4_mask=0
+Hotkey_5_event=7
+Hotkey_5_key=121
+Hotkey_5_mask=0
+Hotkey_6_event=8
+Hotkey_6_key=123
+Hotkey_6_mask=0
+Hotkey_7_event=9
+Hotkey_7_key=122
+Hotkey_7_mask=0
+NumHotkeys=8
 
 [gtkui]
 column_widths=10,275,175,10,175,175,10,100,38,70,275,275,275,10,275
@@ -34,21 +62,18 @@ item1_name=OpenGL Spectrum Analyzer
 item1_pos=-1,642,33,625,754
 item_count=2
 
-[history]
-entry0=https://www.youtube.com/watch?v=YEPLHKNrYgw
-entry1=https://www.youtube.com/playlist?list=PLQipVSzxhmzSsoeZGBJv9pjVvAE9l3moW
-entry2=https://drive.google.com/file/d/1XXHafy5xkcVKwIVtfJspkNGcChe0HWRo/view?usp=sharing
-entry3=https://drive.google.com/drive/folders/199bQIFaTyLIVoIqjTBsYJ8YIQVMMCwxG
+[lyricwiki]
+split-title-on-chars=TRUE
 
 [notify]
 actions=FALSE
 
 [qtui]
-column_widths=25,25,570,175,50,234,175,25,100,25,71,275,275,275,75
+column_widths=25,25,570,175,50,234,175,25,100,25,63,275,275,275,75
 infoarea_visible=FALSE
 menu_visible=FALSE
-player_height=806
-player_width=950
+player_height=893
+player_width=1810
 playlist_columns=playing length title
 playlist_headers_bold=TRUE
 
@@ -67,8 +92,8 @@ playlist_y=244
 skin=/usr/share/audacious/Skins/Default
 
 [skins-layout]
-qt-spectrum=462,299,288,192
-vumeter-qt=187,315,288,192
+qt-spectrum=574,589,288,192
+vumeter-qt=483,849,231,192
 
 [vumeter]
 falloff=30
