--- a/starship.toml
+++ b/starship.toml
@@ -29,7 +29,7 @@ format = '[\($state( $progress_current of $progress_total)\)]($style) '
 conflicted = "⚔️ "
 ahead = "🏎️ 💨×${count} "
 behind = "🐢×${count} "
-diverged = "🔱 🏎️ 💨×${ahead_count} 🐢×{behind_count} "
+diverged = "🔱 🏎️ 💨×{ahead_count} 🐢×${behind_count} "
 untracked = "🛤️ ×${count} "
 stashed = "📦 "
 modified = "📝×${count} "
