--- a/lxterminal/lxterminal.conf
+++ b/lxterminal/lxterminal.conf
@@ -1,29 +1,29 @@
 [general]
-fontname=JetBrains Mono 13
+fontname=JetBrains Mono Medium 11
 selchars=-A-Za-z0-9,./?%&#:_
-scrollback=99990
-bgcolor=rgba(0,0,0,0.889262)
-fgcolor=rgb(196,197,181)
-palette_color_0=rgb(26,26,26)
-palette_color_1=rgb(244,0,95)
-palette_color_10=rgb(152,224,36)
-palette_color_11=rgb(224,213,97)
-palette_color_12=rgb(157,101,255)
-palette_color_13=rgb(244,0,95)
-palette_color_14=rgb(88,209,235)
-palette_color_15=rgb(246,246,239)
-palette_color_2=rgb(152,224,36)
-palette_color_3=rgb(250,132,25)
-palette_color_4=rgb(157,101,255)
-palette_color_5=rgb(244,0,95)
-palette_color_6=rgb(88,209,235)
-palette_color_7=rgb(196,197,181)
-palette_color_8=rgb(98,94,76)
-palette_color_9=rgb(244,0,95)
+scrollback=1000
+bgcolor=rgba(0,0,0,0.798658)
+fgcolor=rgb(249,249,249)
+palette_color_0=rgb(18,18,18)
+palette_color_1=rgb(250,41,52)
+palette_color_10=rgb(177,224,95)
+palette_color_11=rgb(255,242,109)
+palette_color_12=rgb(4,67,255)
+palette_color_13=rgb(242,0,246)
+palette_color_14=rgb(81,206,255)
+palette_color_15=rgb(255,255,255)
+palette_color_2=rgb(152,225,35)
+palette_color_3=rgb(255,243,10)
+palette_color_4=rgb(4,67,255)
+palette_color_5=rgb(248,0,248)
+palette_color_6=rgb(1,182,237)
+palette_color_7=rgb(255,255,255)
+palette_color_8=rgb(131,131,131)
+palette_color_9=rgb(246,102,157)
 color_preset=Custom
 disallowbold=false
 boldbright=true
-cursorblinks=true
+cursorblinks=false
 cursorunderline=true
 audiblebell=false
 visualbell=false
@@ -32,7 +32,7 @@ geometry_columns=80
 geometry_rows=24
 hidescrollbar=true
 hidemenubar=true
-hideclosebutton=false
+hideclosebutton=true
 hidepointer=false
 disablef10=false
 disablealt=false
