--- a/lxterminal/lxterminal.conf
+++ b/lxterminal/lxterminal.conf
@@ -3,24 +3,24 @@ fontname=JetBrains Mono Medium 11
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 bgcolor=rgba(0,0,0,0.798658)
-fgcolor=rgb(249,249,249)
-palette_color_0=rgb(18,18,18)
-palette_color_1=rgb(250,41,52)
-palette_color_10=rgb(177,224,95)
-palette_color_11=rgb(255,242,109)
-palette_color_12=rgb(4,67,255)
-palette_color_13=rgb(242,0,246)
-palette_color_14=rgb(81,206,255)
-palette_color_15=rgb(255,255,255)
-palette_color_2=rgb(152,225,35)
-palette_color_3=rgb(255,243,10)
-palette_color_4=rgb(4,67,255)
-palette_color_5=rgb(248,0,248)
-palette_color_6=rgb(1,182,237)
-palette_color_7=rgb(255,255,255)
-palette_color_8=rgb(131,131,131)
-palette_color_9=rgb(246,102,157)
+fgcolor=rgb(255,255,255)
 color_preset=Custom
+palette_color_0=#121212
+palette_color_8=#838383
+palette_color_1=#877C82
+palette_color_9=#877C82
+palette_color_2=#907367
+palette_color_10=#907367
+palette_color_3=#A18579
+palette_color_11=#A18579
+palette_color_4=#AA4C3A
+palette_color_12=#AA4C3A
+palette_color_5=#B09B92
+palette_color_13=#B09B92
+palette_color_6=#CCB3A3
+palette_color_14=#CCB3A3
+palette_color_7=#D7C5B6
+palette_color_15=#D7C5B6
 disallowbold=false
 boldbright=true
 cursorblinks=false
