--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,1 +1,2 @@
- script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
+script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
+ytdl-format='bestvideo[height<=1080][vcodec!=vp9]+bestaudio/best'
