--- a/pcmanfm/default/pcmanfm.conf
+++ b/pcmanfm/default/pcmanfm.conf
@@ -9,8 +9,8 @@ autorun=1
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=1268
-win_height=754
+win_width=1266
+win_height=786
 splitter_pos=189
 media_in_new_tab=0
 desktop_folder_new_win=0
@@ -21,6 +21,7 @@ side_pane_mode=places
 view_mode=list
 show_hidden=0
 sort=name;ascending;
+columns=name:200;desc:143;size;mtime;
 toolbar=newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
