--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x4\0\0\0&\0\0\x4\xfb\0\0\x3\x1b\0\0\0\x6\0\0\0(\0\0\x4\xf9\0\0\x3\x19\0\0\0\0\0\0\0\0\x5\0\0\0\0\x6\0\0\0(\0\0\x4\xf9\0\0\x3\x19)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x82\0\0\0&\0\0\x4\xfb\0\0\x3\x1b\0\0\x2\x84\0\0\0(\0\0\x4\xf9\0\0\x3\x19\0\0\0\0\0\0\0\0\x5\0\0\0\x2\x84\0\0\0(\0\0\x4\xf9\0\0\x3\x19)
 
 [Troubleshooting]
 force_raster_widgets=1
