--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -1,11 +1,11 @@
-#? Config file for btop v. 1.2.8
+#? Config file for btop v. 1.2.9
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/usr/share/btop/themes/monokai.theme"
+color_theme = "/usr/share/btop/themes/flat-remix.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
-theme_background = False
+theme_background = True
 
 #* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
 truecolor = True
@@ -47,14 +47,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "net proc mem cpu"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 2000
+update_ms = 1000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu lazy"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -74,6 +74,9 @@ proc_per_core = False
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
 
+#* Show cpu graph for each process.
+proc_cpu_graphs = False
+
 #* Use /proc/[pid]/smaps for memory information in the process info box (very slow but more accurate)
 proc_info_smaps = False
 
@@ -81,7 +84,7 @@ proc_info_smaps = False
 proc_left = False
 
 #* (Linux) Filter processes tied to the Linux kernel(similar behavior to htop).
-proc_filter_kernel = False
+proc_filter_kernel = True
 
 #* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
@@ -122,7 +125,7 @@ cpu_core_map = ""
 temp_scale = "celsius"
 
 #* Use base 10 for bits/bytes sizes, KB = 1000 instead of KiB = 1024.
-base_10_sizes = False
+base_10_sizes = True
 
 #* Show CPU frequency.
 show_cpu_freq = True
@@ -157,13 +160,16 @@ show_swap = True
 swap_disk = True
 
 #* If mem box should be split to also show disks info.
-show_disks = True
+show_disks = False
 
 #* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
 only_physical = True
 
 #* Read disks list from /etc/fstab. This also disables only_physical.
 use_fstab = True
+
+#* Setting this to True will hide all datasets, and only show ZFS pools. (IO stats will be calculated per-pool)
+zfs_hide_datasets = False
 
 #* Set to true to show available disk space for privileged users.
 disk_free_priv = False
@@ -182,9 +188,9 @@ io_graph_combined = False
 io_graph_speeds = ""
 
 #* Set fixed values for network graphs in Mebibits. Is only used if net_auto is also set to False.
-net_download = 100
+net_download = 200
 
-net_upload = 100
+net_upload = 200
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
 net_auto = True
