--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
-icon_theme=ePapirus-Dark
+icon_theme=Tela-black-dark
 standard_dialogs=gtk3
 style=Fusion
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0\f\0R\0o\0\x62\0o\0t\0o@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\f\0R\0o\0\x62\0o\0t\0o@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
+fixed=@Variant(\0\0\0@\0\0\0\f\0R\0o\0\x62\0o\0t\0o@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+general=@Variant(\0\0\0@\0\0\0\f\0R\0o\0\x62\0o\0t\0o@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x82\0\0\0&\0\0\x4\xfb\0\0\x3\x1b\0\0\x2\x84\0\0\0(\0\0\x4\xf9\0\0\x3\x19\0\0\0\0\0\0\0\0\x5\0\0\0\x2\x84\0\0\0(\0\0\x4\xf9\0\0\x3\x19)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x2\0\0\0\x2\0\0\x4\xfd\0\0\x3\x1d\0\0\0\a\0\0\0\x14\0\0\x4\xf8\0\0\x3%\0\0\0\0\x2\0\0\0\x5\0\0\0\0\x5\0\0\0\x5\0\0\x4\xfa\0\0\x3\x1a)
 
 [Troubleshooting]
 force_raster_widgets=1
