I must sleep... it's working... in just three hours...

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,3 +1,4 @@
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
 ytdl-format='bestvideo[height<=1080][vcodec!=vp9]+bestaudio/best'
 demuxer-max-bytes=250000KiB
+sub-scale=80
