--- a/lxterminal/lxterminal.conf
+++ b/lxterminal/lxterminal.conf
@@ -1,26 +1,26 @@
+[shortcut]
+new_window_accel=<Primary><Shift>n
+new_tab_accel=<Primary><Shift>t
+close_tab_accel=<Primary><Shift>w
+close_window_accel=<Primary><Shift>q
+copy_accel=<Primary><Shift>c
+paste_accel=<Primary><Shift>v
+name_tab_accel=<Primary><Shift>i
+previous_tab_accel=<Primary>Page_Up
+next_tab_accel=<Primary>Page_Down
+move_tab_left_accel=<Primary><Shift>Page_Up
+move_tab_right_accel=<Primary><Shift>Page_Down
+zoom_in_accel=<Primary><Shift>plus
+zoom_out_accel=<Primary><Shift>underscore
+zoom_reset_accel=<Primary><Shift>parenright
+
 [general]
 fontname=JetBrains Mono NL 11
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 bgcolor=rgba(0,0,0,0.708054)
 fgcolor=rgb(229,229,229)
-palette_color_0=rgb(0,0,0)
-palette_color_1=rgb(205,0,0)
-palette_color_2=rgb(0,205,0)
-palette_color_3=rgb(205,205,0)
-palette_color_4=rgb(0,0,238)
-palette_color_5=rgb(205,0,205)
-palette_color_6=rgb(0,205,205)
-palette_color_7=rgb(229,229,229)
-palette_color_8=rgb(127,127,127)
-palette_color_9=rgb(255,0,0)
-palette_color_10=rgb(0,255,0)
-palette_color_11=rgb(255,255,0)
-palette_color_12=rgb(92,92,255)
-palette_color_13=rgb(255,0,255)
-palette_color_14=rgb(0,255,255)
-palette_color_15=rgb(255,255,255)
-color_preset=Custom
+color_preset=VGA
 disallowbold=false
 boldbright=false
 cursorblinks=true
@@ -38,18 +38,42 @@ disablef10=false
 disablealt=false
 disableconfirm=false
 
-[shortcut]
-new_window_accel=<Primary><Shift>n
-new_tab_accel=<Primary><Shift>t
-close_tab_accel=<Primary><Shift>w
-close_window_accel=<Primary><Shift>q
-copy_accel=<Primary><Shift>c
-paste_accel=<Primary><Shift>v
-name_tab_accel=<Primary><Shift>i
-previous_tab_accel=<Primary>Page_Up
-next_tab_accel=<Primary>Page_Down
-move_tab_left_accel=<Primary><Shift>Page_Up
-move_tab_right_accel=<Primary><Shift>Page_Down
-zoom_in_accel=<Primary><Shift>plus
-zoom_out_accel=<Primary><Shift>underscore
-zoom_reset_accel=<Primary><Shift>parenright
+fontname=JetBrains Mono NL 12
+selchars=-A-Za-z0-9,./?%&#:_
+scrollback=1000
+bgcolor=rgba(0,0,0,0.708054)
+fgcolor=rgb(229,229,229)
+color_preset=VGA
+disallowbold=false
+boldbright=false
+cursorblinks=true
+cursorunderline=true
+audiblebell=false
+visualbell=false
+tabpos=top
+geometry_columns=80
+geometry_rows=24
+hidescrollbar=true
+hidemenubar=true
+hideclosebutton=false
+hidepointer=false
+disablef10=false
+disablealt=false
+disableconfirm=false
+
+palette_color_0=#121212
+palette_color_8=#838383
+palette_color_1=#B82443
+palette_color_9=#B82443
+palette_color_2=#9C0970
+palette_color_10=#9C0970
+palette_color_3=#FAB344
+palette_color_11=#FAB344
+palette_color_4=#5E1E91
+palette_color_12=#5E1E91
+palette_color_5=#6B359C
+palette_color_13=#6B359C
+palette_color_6=#9B1189
+palette_color_14=#9B1189
+palette_color_7=#A560A5
+palette_color_15=#A560A5
